--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
     "@types/better-sqlite3": "^7.6.13",
+    "@types/multer": "^1.4.13",
     "autoprefixer": "^10.4.20",
     "better-sqlite3": "^11.10.0",
     "class-variance-authority": "^0.7.1",
@@ -51,15 +52,18 @@
     "fs": "latest",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
+    "multer": "^2.0.1",
     "next": "15.2.4",
     "next-themes": "latest",
     "path": "latest",
     "react": "^19",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
+    "sharp": "^0.34.2",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
