MEGA MEJORA: Sistema de exportación con filtros avanzados
- NUEVO: Filtros múltiples combinables - puedes elegir exactamente qué fotos exportar
-  Selector de múltiples ratings: elige 3 y 5 estrellas, o cualquier combinación
-  Filtro de favoritas: solo favoritas, solo no favoritas, o ambas
-  Filtros de etiquetas: seleccionar/revisar/descartar/sin etiqueta por separado
-  Filtro de revisión: solo revisadas, solo pendientes, o ambas
-  Filtros rápidos con botones: '3-4-5', 'Solo seleccionadas', '4-5 + Seleccionadas'
-  Vista previa en tiempo real: muestra exactamente cuántas fotos se exportarán
-  Botón restablecer para volver a todos los filtros activos
-  Interfaz rediseñada con iconos, contadores dinámicos y mejor UX
-  Validación: no permite exportar si no hay fotos seleccionadas
-  Diálogo responsive con scroll para pantallas pequeñas

EJEMPLOS DE USO:
- Exportar solo fotos de 3 y 5 estrellas
- Fotos seleccionadas (verdes) que sean 4+ estrellas
- Solo favoritas sin importar rating
- Todas excepto las marcadas para descartar
- Combinar cualquier criterio que necesites

Sistema súper flexible que permite exportar exactamente lo que el cliente necesita!

--- a/data/app-data.json
+++ b/data/app-data.json
@@ -1654,8 +1654,9 @@
     "review-photo-session-1752228283162-1752228295570-2": {
       "id": "review-photo-session-1752228283162-1752228295570-2",
       "photoId": "photo-session-1752228283162-1752228295570-2",
-      "rating": 3,
-      "updatedAt": 1752228296125
+      "rating": 5,
+      "updatedAt": 1752238310534,
+      "isReviewed": true
     },
     "review-photo-session-1752228283162-1752228295570-3": {
       "id": "review-photo-session-1752228283162-1752228295570-3",
@@ -1672,8 +1673,9 @@
     "review-photo-session-1752228283162-1752228295570-5": {
       "id": "review-photo-session-1752228283162-1752228295570-5",
       "photoId": "photo-session-1752228283162-1752228295570-5",
-      "rating": 3,
-      "updatedAt": 1752228296720
+      "rating": 5,
+      "updatedAt": 1752238318448,
+      "isReviewed": true
     },
     "review-photo-session-1752228283162-1752228295570-6": {
       "id": "review-photo-session-1752228283162-1752228295570-6",
@@ -1702,8 +1704,9 @@
     "review-photo-session-1752228283162-1752228295570-10": {
       "id": "review-photo-session-1752228283162-1752228295570-10",
       "photoId": "photo-session-1752228283162-1752228295570-10",
-      "rating": 3,
-      "updatedAt": 1752228297990
+      "rating": 5,
+      "updatedAt": 1752238321037,
+      "isReviewed": true
     },
     "review-photo-session-1752228283162-1752228295570-11": {
       "id": "review-photo-session-1752228283162-1752228295570-11",
