Mejora interfaz: halo de selección elegante y eliminación de tick verde
- Eliminar tick verde redundante de isReviewed
- Implementar halo de selección blanco/gris elegante
- Mejorar efecto visual con sombra y escala sutil
- Mantener consistencia entre páginas fotógrafo/cliente
- Soporte completo para modo claro/oscuro

--- a/data/app-data.json
+++ b/data/app-data.json
@@ -1642,146 +1642,167 @@
     "review-photo-session-1752228283162-1752228295570-0": {
       "id": "review-photo-session-1752228283162-1752228295570-0",
       "photoId": "photo-session-1752228283162-1752228295570-0",
-      "rating": 3,
-      "updatedAt": 1752228295771
+      "rating": 5,
+      "updatedAt": 1752239260611,
+      "isReviewed": true
     },
     "review-photo-session-1752228283162-1752228295570-1": {
       "id": "review-photo-session-1752228283162-1752228295570-1",
       "photoId": "photo-session-1752228283162-1752228295570-1",
-      "rating": 3,
-      "updatedAt": 1752228295923
+      "rating": 5,
+      "updatedAt": 1752241112047,
+      "isReviewed": true,
+      "colorTag": null
     },
     "review-photo-session-1752228283162-1752228295570-2": {
       "id": "review-photo-session-1752228283162-1752228295570-2",
       "photoId": "photo-session-1752228283162-1752228295570-2",
       "rating": 5,
-      "updatedAt": 1752238310534,
-      "isReviewed": true
+      "updatedAt": 1752241112049,
+      "isReviewed": true,
+      "colorTag": null
     },
     "review-photo-session-1752228283162-1752228295570-3": {
       "id": "review-photo-session-1752228283162-1752228295570-3",
       "photoId": "photo-session-1752228283162-1752228295570-3",
       "rating": 3,
-      "updatedAt": 1752228296237
+      "updatedAt": 1752239519563,
+      "isReviewed": true
     },
     "review-photo-session-1752228283162-1752228295570-4": {
       "id": "review-photo-session-1752228283162-1752228295570-4",
       "photoId": "photo-session-1752228283162-1752228295570-4",
       "rating": 5,
-      "updatedAt": 1752238673769,
+      "updatedAt": 1752239260610,
       "isReviewed": true
     },
     "review-photo-session-1752228283162-1752228295570-5": {
       "id": "review-photo-session-1752228283162-1752228295570-5",
       "photoId": "photo-session-1752228283162-1752228295570-5",
       "rating": 5,
-      "updatedAt": 1752238318448,
-      "isReviewed": true
+      "updatedAt": 1752241112048,
+      "isReviewed": true,
+      "colorTag": null
     },
     "review-photo-session-1752228283162-1752228295570-6": {
       "id": "review-photo-session-1752228283162-1752228295570-6",
       "photoId": "photo-session-1752228283162-1752228295570-6",
       "rating": 5,
-      "updatedAt": 1752238677018,
-      "isReviewed": true
+      "updatedAt": 1752241112046,
+      "isReviewed": true,
+      "colorTag": null
     },
     "review-photo-session-1752228283162-1752228295570-7": {
       "id": "review-photo-session-1752228283162-1752228295570-7",
       "photoId": "photo-session-1752228283162-1752228295570-7",
-      "rating": 5,
-      "updatedAt": 1752238678903,
+      "rating": 3,
+      "updatedAt": 1752239519589,
       "isReviewed": true
     },
     "review-photo-session-1752228283162-1752228295570-8": {
       "id": "review-photo-session-1752228283162-1752228295570-8",
       "photoId": "photo-session-1752228283162-1752228295570-8",
-      "rating": 3,
-      "updatedAt": 1752228297549
+      "rating": 5,
+      "updatedAt": 1752239260776,
+      "isReviewed": true
     },
     "review-photo-session-1752228283162-1752228295570-9": {
       "id": "review-photo-session-1752228283162-1752228295570-9",
       "photoId": "photo-session-1752228283162-1752228295570-9",
-      "rating": 3,
-      "updatedAt": 1752228297748
+      "rating": 5,
+      "updatedAt": 1752239260776,
+      "isReviewed": true
     },
     "review-photo-session-1752228283162-1752228295570-10": {
       "id": "review-photo-session-1752228283162-1752228295570-10",
       "photoId": "photo-session-1752228283162-1752228295570-10",
       "rating": 5,
-      "updatedAt": 1752238321037,
+      "updatedAt": 1752239260802,
       "isReviewed": true
     },
     "review-photo-session-1752228283162-1752228295570-11": {
       "id": "review-photo-session-1752228283162-1752228295570-11",
       "photoId": "photo-session-1752228283162-1752228295570-11",
-      "rating": 3,
-      "updatedAt": 1752228298140
+      "rating": 5,
+      "updatedAt": 1752239260821,
+      "isReviewed": true
     },
     "review-photo-session-1752228283162-1752228295570-12": {
       "id": "review-photo-session-1752228283162-1752228295570-12",
       "photoId": "photo-session-1752228283162-1752228295570-12",
-      "rating": 3,
-      "updatedAt": 1752228298427
+      "rating": 5,
+      "updatedAt": 1752239260822,
+      "isReviewed": true
     },
     "review-photo-session-1752228283162-1752228295570-13": {
       "id": "review-photo-session-1752228283162-1752228295570-13",
       "photoId": "photo-session-1752228283162-1752228295570-13",
-      "rating": 3,
-      "updatedAt": 1752228298622
+      "rating": 5,
+      "updatedAt": 1752239260822,
+      "isReviewed": true
     },
     "review-photo-session-1752228283162-1752228295570-14": {
       "id": "review-photo-session-1752228283162-1752228295570-14",
       "photoId": "photo-session-1752228283162-1752228295570-14",
-      "rating": 3,
-      "updatedAt": 1752228298867
+      "rating": 5,
+      "updatedAt": 1752239260823,
+      "isReviewed": true
     },
     "review-photo-session-1752228283162-1752228295570-15": {
       "id": "review-photo-session-1752228283162-1752228295570-15",
       "photoId": "photo-session-1752228283162-1752228295570-15",
-      "rating": 3,
-      "updatedAt": 1752228299014
+      "rating": 5,
+      "updatedAt": 1752239260876,
+      "isReviewed": true
     },
     "review-photo-session-1752228283162-1752228295570-16": {
       "id": "review-photo-session-1752228283162-1752228295570-16",
       "photoId": "photo-session-1752228283162-1752228295570-16",
-      "rating": 3,
-      "updatedAt": 1752228299208
+      "rating": 5,
+      "updatedAt": 1752239260908,
+      "isReviewed": true
     },
     "review-photo-session-1752228283162-1752228295570-17": {
       "id": "review-photo-session-1752228283162-1752228295570-17",
       "photoId": "photo-session-1752228283162-1752228295570-17",
-      "rating": 3,
-      "updatedAt": 1752228299320
+      "rating": 5,
+      "updatedAt": 1752239260920,
+      "isReviewed": true
     },
     "review-photo-session-1752228283162-1752228295570-18": {
       "id": "review-photo-session-1752228283162-1752228295570-18",
       "photoId": "photo-session-1752228283162-1752228295570-18",
-      "rating": 3,
-      "updatedAt": 1752228299577
+      "rating": 5,
+      "updatedAt": 1752239260921,
+      "isReviewed": true
     },
     "review-photo-session-1752228283162-1752228295570-19": {
       "id": "review-photo-session-1752228283162-1752228295570-19",
       "photoId": "photo-session-1752228283162-1752228295570-19",
-      "rating": 3,
-      "updatedAt": 1752228299875
+      "rating": 5,
+      "updatedAt": 1752239260922,
+      "isReviewed": true
     },
     "review-photo-session-1752228283162-1752228295570-20": {
       "id": "review-photo-session-1752228283162-1752228295570-20",
       "photoId": "photo-session-1752228283162-1752228295570-20",
-      "rating": 3,
-      "updatedAt": 1752228300135
+      "rating": 5,
+      "updatedAt": 1752239260949,
+      "isReviewed": true
     },
     "review-photo-session-1752228283162-1752228295570-21": {
       "id": "review-photo-session-1752228283162-1752228295570-21",
       "photoId": "photo-session-1752228283162-1752228295570-21",
-      "rating": 3,
-      "updatedAt": 1752228300595
+      "rating": 5,
+      "updatedAt": 1752239260973,
+      "isReviewed": true
     },
     "review-photo-session-1752228283162-1752228295570-22": {
       "id": "review-photo-session-1752228283162-1752228295570-22",
       "photoId": "photo-session-1752228283162-1752228295570-22",
-      "rating": 3,
-      "updatedAt": 1752228300701
+      "rating": 5,
+      "updatedAt": 1752239261118,
+      "isReviewed": true
     },
     "review-photo-session-1752228546456-1752228591070-0": {
       "id": "review-photo-session-1752228546456-1752228591070-0",
@@ -1828,44 +1849,51 @@
     "review-photo-session-1752228283162-1752235237505-0": {
       "id": "review-photo-session-1752228283162-1752235237505-0",
       "photoId": "photo-session-1752228283162-1752235237505-0",
-      "rating": 0,
-      "updatedAt": 1752235237676
+      "rating": 5,
+      "updatedAt": 1752239261119,
+      "isReviewed": true
     },
     "review-photo-session-1752228283162-1752235237505-1": {
       "id": "review-photo-session-1752228283162-1752235237505-1",
       "photoId": "photo-session-1752228283162-1752235237505-1",
-      "rating": 0,
-      "updatedAt": 1752235237923
+      "rating": 5,
+      "updatedAt": 1752239261120,
+      "isReviewed": true
     },
     "review-photo-session-1752228283162-1752235237505-2": {
       "id": "review-photo-session-1752228283162-1752235237505-2",
       "photoId": "photo-session-1752228283162-1752235237505-2",
-      "rating": 0,
-      "updatedAt": 1752235238243
+      "rating": 5,
+      "updatedAt": 1752239261139,
+      "isReviewed": true
     },
     "review-photo-session-1752228283162-1752235237505-3": {
       "id": "review-photo-session-1752228283162-1752235237505-3",
       "photoId": "photo-session-1752228283162-1752235237505-3",
-      "rating": 0,
-      "updatedAt": 1752235238562
+      "rating": 5,
+      "updatedAt": 1752239261155,
+      "isReviewed": true
     },
     "review-photo-session-1752228283162-1752235237505-4": {
       "id": "review-photo-session-1752228283162-1752235237505-4",
       "photoId": "photo-session-1752228283162-1752235237505-4",
-      "rating": 0,
-      "updatedAt": 1752235238812
+      "rating": 5,
+      "updatedAt": 1752239261172,
+      "isReviewed": true
     },
     "review-photo-session-1752228283162-1752235237505-5": {
       "id": "review-photo-session-1752228283162-1752235237505-5",
       "photoId": "photo-session-1752228283162-1752235237505-5",
-      "rating": 0,
-      "updatedAt": 1752235239119
+      "rating": 5,
+      "updatedAt": 1752239261173,
+      "isReviewed": true
     },
     "review-photo-session-1752228283162-1752235237505-6": {
       "id": "review-photo-session-1752228283162-1752235237505-6",
       "photoId": "photo-session-1752228283162-1752235237505-6",
-      "rating": 0,
-      "updatedAt": 1752235239386
+      "rating": 5,
+      "updatedAt": 1752239261174,
+      "isReviewed": true
     }
   },
   "photographers": {
