--- a/package.json
+++ b/package.json
@@ -68,8 +68,9 @@
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
     "sharp": "^0.34.2",
-    "sonner": "^1.7.1",
-    "tailwind-merge": "^2.5.5",
+    "sonner": "^1.7.4",
+    "nodemailer": "^6.9.1",
+    "tailwind-merge": "2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
     "xlsx": "^0.18.5",
